--- a/package.json
+++ b/package.json
@@ -4,19 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec babel-node --presets react,es2015 server.js"
+    "dev": "nodemon --exec babel-node --presets react,es2015 server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "lodash": "^4.16.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-google-maps": "^4.11.0",
     "react-redux": "^4.4.5",
+    "react-sparklines": "^1.6.0",
     "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
